@@ -40,6 +40,9 @@ API
   - for special and/or known folder identifier
 * remove liblnk_file_get_link_target_identifier_data
 
+20150609
+* Bug fix for handling volume label
+
 20150105
 * 2015 update
 
